netpol/app-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app
spec:
  podSelector:
    matchLabels:
      app: book
  ingress:
  - ports:
    - port: 80
    from:
    - namespaceSelector:
        matchLabels:
          ns: proxy-ns
  egress:
  - ports:
    - port: 80
    to:
    - namespaceSelector:
        matchLabels:
          ns: proxy-ns
