netpol/app2-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app2
spec:
  podSelector:
    matchLabels:
      app: music
  ingress:
  - ports:
    - port: 80
    from:
    - namespaceSelector:
        matchLabels:
          ns: proxy-ns
  egress:
  - ports:
    - port: 80
    to:
    - namespaceSelector:
        matchLabels:
          ns: proxy-ns
