netpol/netpol-2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-2
spec:
  podSelector:
    matchLabels:
      role: app
  ingress:
  - from:
      - podSelector:
          matchLabels:
            run: myblog


apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol
spec:
  podSelector:
    matchLabels:
      run: myblog
  ingress:
  - from:
      - podSelector:
          matchLabels:
            stage: product
  egress:
  - to:
      - podSelector:
          matchLabels:
            stage: product
