netpol/netpol-3.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: default
  name: netpol-3
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
