netpol/netpol-4.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-4
spec:
  podSelector:
    matchLabels:
      run: myblog
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          stage: product
