netpol/pod1-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod1
spec:
  podSelector:
    matchLabels:
      pod: pod1
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector: {}
