netpol/proxy-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: proxy
spec:
  podSelector:
    matchLabels:
      app: proxy
  ingress:
  - ports:
    - port: 80
    from:
    - namespaceSelector:
        matchLabels:
          ns: default-ns
